# wow-bots

./: .gitignore  CMakeLists.txt  README.md  bots.conf
app/: BotApp.cpp
cmake/: BuildConfig.cmake
packets/: Login.h  Movement.h  packet-builder.cpp  packet-builder.h
src/Bots/: Bot.cpp  Bot.h  BotAccounts.cpp  BotAccounts.h  BotAuth.cpp  BotAuth.h  BotConfig.h  BotLogging.cpp  BotLogging.h  BotMain.cpp  BotMain.h  BotMgr.cpp  BotMgr.h  BotOpcodes.cpp  BotOpcodes.h  BotPacket.cpp  BotPacket.h  BotSocket.cpp  BotSocket.h
src/Commands/: BotCommandMgr.cpp  BotCommandMgr.h  BotCommands.h
src/Events/: BotEvent.cpp  BotEvent.h  BotEvents.cpp  BotEvents.h
src/Lua/: BotLua.cpp  BotLua.h  BotLuaCommand.cpp  BotLuaCommand.h  BotLuaShared.cpp  BotLuaShared.h  BotProfileLua.cpp  BotProfileLua.h
src/Map/: BotMapDataMgr.cpp  BotMapDataMgr.h  BotMaps.cpp  BotMaps.h
src/Packets/: Movement.cpp  Movement.h  Update.cpp  Update.h
src/Profile/: BotEvent.h  BotMutable.h  BotProfile.cpp  BotProfile.h  PacketTU.cpp  PacketTypes.h
typescript/: bots.global.d.ts  commands.global.d.ts  opcodes.global.d.ts  profiles.global.d.ts  shared.global.d.ts
